added delete methods